--- a/Project_01/assets/css/style.css
+++ b/Project_01/assets/css/style.css
@@ -49,6 +49,18 @@ a {
   opacity: 0.9;
   cursor: pointer;
 }
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+.break-all {
+  word-break: break-all;
+}
 /* --------Header------------ */
 .header {
   background: #fffcf4;
@@ -295,6 +307,7 @@ a {
   display: flex;
 }
 .popular .course-item {
+  flex: 1;
   border-radius: 12px;
   border: 1px solid #e2dfda;
   background: #fff;
