--- a/Project_01/assets/css/style.css
+++ b/Project_01/assets/css/style.css
@@ -377,8 +377,16 @@ a {
   padding: 96px 0;
   background-color: #2e2100;
 }
-.feedback .feedback-item {
+.feedback-list {
   display: flex;
+  overflow: hidden;
+}
+.feedback-item {
+  width: 100%;
+  display: flex;
+  flex-shrink: 0;
+  /* transform: translateX(-100%);
+  transition: all ease 0.5s; */
 }
 .feedback .avatar {
   width: 72px;
@@ -421,7 +429,7 @@ a {
 
 .feedback-item blockquote {
   color: #fff;
-  font-size: 2.6re;
+  font-size: 2.6rem;
   font-style: italic;
   line-height: 1.54; /* 153.846% */
 }
