--- a/Project_01/assets/css/style.css
+++ b/Project_01/assets/css/style.css
@@ -434,7 +434,7 @@ a {
   line-height: 1.54; /* 153.846% */
 }
 
-/* ===============features============== */
+/* ===============features 1============== */
 .features {
   margin-top: 135px;
   padding: 65px 0;
@@ -472,4 +472,19 @@ a {
   height: 50px;
   flex-shrink: 0;
   background-color: var(--primary-color);
+}
+
+/* ===============features ============== */
+.features-2nd {
+  margin-top: 70px;
+}
+.features-2nd .body {
+  flex-direction: row-reverse;
+}
+.features-2nd .content {
+  width: 49%;
+}
+.features-2nd .images img {
+  width: 470px;
+  height: 440px;
 }
