--- a/Project_01/assets/css/style.css
+++ b/Project_01/assets/css/style.css
@@ -507,14 +507,18 @@ a {
   line-height: 1.75; /* 175% */
 }
 .blogs .blog-list {
+  overflow: hidden;
   display: flex;
   margin-top: 55px;
   gap: 30px;
 }
 .blogs .item {
-  width: 33.33%;
+  flex-shrink: 0;
+  width: calc(33.33% - 20px);
   border-radius: 16px;
   background: #fff;
+  /* transition: all ease 0.5s;
+  transform: translateX(-100%); */
 }
 .blogs .item :hover {
   box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
@@ -568,7 +572,25 @@ a {
 }
 .blogs .item .btn {
   margin-top: 12px;
+  font-size: 1.4rem;
 }
 .blogs .item .btn:hover {
   background-color: var(--primary-color);
+}
+.blogs .dots {
+  display: flex;
+  margin-top: 38px;
+  justify-content: center;
+  gap: 6px;
+}
+.blogs .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #5f5b53;
+  cursor: pointer;
+}
+.blogs .dot.active {
+  background-color: var(--primary-color);
+  cursor: default;
 }
